--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,24 +42,43 @@ a {
   text-decoration: none;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Full viewport height */
+}
+
+main {
+  flex: 1; /* Fills the remaining space between header and footer */
+}
+
+footer {
+  text-align: center;
+  position: relative; /* Optional: if you want the footer to stick to the bottom */
+  width: 100%;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
-/* small */
+
+/* Small */
 @media (min-width: 768px) {
   .container {
     width: 750px;
   }
 }
+
 /* Medium */
 @media (min-width: 992px) {
   .container {
     width: 970px;
   }
 }
+
 /* Large */
 @media (min-width: 1200px) {
   .container {
