--- a/frontend/src/Components/ImageSlider/ImageSlider.css
+++ b/frontend/src/Components/ImageSlider/ImageSlider.css
@@ -18,7 +18,6 @@
   display: flex;
   transition: transform 0.5s ease-in-out;
   width: 100%;
-  /* height: 100%; */
 }
 
 .slider-container .slide {
@@ -37,15 +36,15 @@
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
+  background-color: rgba(73, 94, 87, 0.7);
+  color: #F4CE14;
   border: none;
   padding: 10px;
   cursor: pointer;
   font-size: 24px;
   z-index: 1;
   opacity: 0;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease, background-color 0.3s ease;
 }
 
 .image-slider .prev {
@@ -61,5 +60,16 @@
 }
 
 .slider-container button:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(73, 94, 87, 0.9);
+}
+
+@media (max-width: 768px) {
+  .slider-container {
+    height: calc(100vh - 100px);
+  }
+
+  .image-slider button {
+    font-size: 20px;
+    padding: 8px;
+  }
 }
