--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,16 +45,16 @@ a {
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Full viewport height */
+  min-height: 100vh;
 }
 
 main {
-  flex: 1; /* Fills the remaining space between header and footer */
+  flex: 1;
 }
 
 footer {
   text-align: center;
-  position: relative; /* Optional: if you want the footer to stick to the bottom */
+  position: relative;
   width: 100%;
 }
 
@@ -65,40 +65,36 @@ footer {
   margin-right: auto;
 }
 
-/* Small */
 @media (min-width: 768px) {
   .container {
     width: 750px;
   }
 }
 
-/* Medium */
 @media (min-width: 992px) {
   .container {
     width: 970px;
   }
 }
 
-/* Large */
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
   }
 }
 
-/* Apply custom scrollbar to the entire page */
 ::-webkit-scrollbar {
   width: 12px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #007bff;
+  background-color: #F4CE14;
   border-radius: 6px;
   border: 3px solid #fff;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #0056b3;
+  background-color: #F4CE14;
 }
 
 ::-webkit-scrollbar-track {
