--- a/frontend/src/Components/ProductSwiper/ProductSwiper.css
+++ b/frontend/src/Components/ProductSwiper/ProductSwiper.css
@@ -47,7 +47,7 @@
 .product-card .add-to-cart {
   margin-top: 10px;
   padding: 4px 8px;
-  background-color: #007bff;
+  background-color: #F4CE14;
   color: white;
   border: none;
   border-radius: 4px;
@@ -58,7 +58,7 @@
 }
 
 .product-card .add-to-cart:hover {
-  background-color: #0056b3;
+  background-color: #F4CE14;
 }
 
 .product-card:hover {
@@ -84,7 +84,7 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-  background-color: #007bff;
+  background-color: #F4CE14;
   color: white;
   border: none;
   width: 30px;
@@ -99,7 +99,7 @@
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
   opacity: 1;
-  background-color: #0056b3;
+  background-color: #F4CE14;
 }
 
 .swiper-button-next {
@@ -120,7 +120,7 @@
   position: fixed;
   bottom: 20px;
   left: 20px;
-  background-color: #007bff;
+  background-color: #F4CE14;
   color: #fff;
   padding: 10px 20px;
   border-radius: 4px;
@@ -169,5 +169,5 @@
 }
 
 .filter-container select:hover {
-  border-color: #007bff;
+  border-color: #F4CE14;
 }
